- Backported fix for #35386 (originally commited in 5.3+), reported recently as 5.2 bug #47845